# sick_gui

./: CMakeLists.txt  LICENSE  README.md  README.txt  main.cpp  ros2_camera_lidar_fusion_correspondences.txt
config/: camera_extrinsic_calibration.yaml  camera_intrinsic_calibration.yaml
examples/: camera.cpp  combined.cpp  lidar_camera.cpp  point_cloud.cpp
scripts/: open3dml_demo.py
scripts/sick_mine_llm/: main.py  rag_framework.py  requirements.txt
scripts/sick_mine_llm/faiss_index/: index.faiss  index.pkl
scripts/sick_mine_llm/local_database/: detections.txt
